<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/graph"
        android:layout_marginBottom="97dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/TextHumOnScreen"
        android:layout_alignEnd="@+id/plotButton"/>

    <TextView
        android:text="@string/TextHumOnScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextHumOnScreen"
        android:textSize="24sp"
        android:layout_below="@+id/TextTempOnScreen"
        android:layout_alignStart="@+id/TextTempOnScreen"
        android:layout_marginTop="12dp"/>

    <TextView
        android:text="@string/TextTempOnScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextTempOnScreen"
        android:textSize="24sp"
        android:layout_marginTop="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/tempViewFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/TextTempOnScreen"
        android:layout_alignBottom="@+id/TextTempOnScreen"
        android:layout_alignStart="@+id/humViewFrag"/>

    <TextView
        android:id="@+id/humViewFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidityTextViewFragment2"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/TextHumOnScreen"
        android:layout_alignBottom="@+id/TextHumOnScreen"
        android:layout_toEndOf="@+id/TextTempOnScreen"
        android:layout_marginStart="36dp"/>

    <Button
        android:id="@+id/plotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plot_graph"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/graph"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"
        style="@android:style/Widget.Button"/>


</RelativeLayout>

