<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/mainToolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_weight="1"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.alexe1ka.iotalexe1ka.MainActivity">


        <TextView
            android:text="@string/requestIp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/startText"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="86dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="177dp"
            android:paddingTop="50dp"
            android:layout_above="@+id/ValidationAndGetId"
            android:layout_alignParentStart="true">

            <!-- Something  comment -->
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:ems="3"
                android:hint="0"
                android:gravity="center"
                android:id="@+id/firstPartOfIp"
                android:imeOptions="actionNext"
                android:layout_weight="1"
                android:textSize="18sp"/>

            <TextView
                android:text="."
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:ems="3"
                android:hint="0"
                android:gravity="center"
                android:id="@+id/secondPartOfIp"
                android:imeOptions="actionNext"
                android:layout_weight="1"/>

            <TextView
                android:text="."
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:ems="3"
                android:hint="0"
                android:gravity="center"
                android:id="@+id/thirdPartOfIp"
                android:imeOptions="actionNext"
                android:layout_weight="1"/>

            <TextView
                android:text="."
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:ems="3"
                android:hint="0"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:id="@+id/fourthPartOfIp"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:text="@string/sendIpToControlActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/controlActivityButton"
            android:onClick="goToControl"
            android:layout_below="@+id/startText"
            android:layout_alignParentStart="true"
            android:layout_marginTop="182dp"
            style="@android:style/Widget.Button"/>

        <Button
            android:text="@string/getIdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="requestIdAndValidation"
            android:id="@+id/ValidationAndGetId"
            android:layout_alignBaseline="@+id/controlActivityButton"
            android:layout_alignBottom="@+id/controlActivityButton"
            android:layout_alignParentStart="true"
            style="@android:style/Widget.Button"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
